  to retain the old behavior (supporting one reference, for either type of
  lookup field).  If an exsiting lookup window field is changed to support more
  the onclick widget property needs to change.  Copy the default value from a new
  lookupwindowfield.
  
- DateTime widgets in the SMI now have a 'calendar' button which
  opens a popup calendar -- an easier way to supply datetimes.

Bugs Fixed
~~~~~~~~~~

- Errors when attempting to upload interlaced PNGs are now caught and
  displayed to the user.

- launchpad #400019: Silva Link: allow editing of relative / absolute property,
  or get rid of it altogether.  Silva 2.1 allowed editing of this property.  Silva
  2.2 has removed the link type.  Now there is only one type of link, and it is the
  authors responsibility to ensure it is a valid relative or absolute link.

- For a possible security issue the "served by host foo" comment was removed
  from macro_index.pt

- The user clipboard 'remove user' button now returns to the correct add user 
  form. (search or direct user lookup)

- tab_preview frameset now requires that the user be logged in.  Previously, if 
  using form-based auth, one might see an authentication screen in both
  frames.

- update last author when documents are saved.

- IContent objects (well, those extending Products.Silva.Content.Content) are now
  cataloged.

- enable changing the html form enctype of edit views using one of the
  macro_edit macros

Silva 2.2a2 (2009-01-12)
------------------------

New Features
~~~~~~~~~~~~

- Recursive publishing actions: on the publish tab it is now possible
  to select containers.  If a folder is selected (which is transparent)
  all subobjects are also selected.  Publication types may also be selected.
  All publishing actions will now be applied to all items contained in the
  selected containers, and recursively all items within publications.

- A New "Kupu Popup" formulator field.  This field is for html content